--- a/about.html
+++ b/about.html
@@ -4,9 +4,10 @@
     <meta charset=" UTF-8 ">
     <meta http-equiv=" X-UA-Compatible " content=" IE=edge ">
     <meta name=" viewport " content= " width=device-width , initial-scale=1.0 ">
-    <title>Jivanlal Patil</title>
+    <title>About Page</title>
 </head>
 <body>
 </body>
+<h1>this is About Page</h1>
 </html>
 
