--- a/login.html
+++ b/login.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page </title>
+    <title>Document</title>
 </head>
 <body>
+    <form action="">
 
-    <h1>Welcome to Home Page</h1>
+        Name:<input placeholder ="Enter here" type="text">
+    </form>
 
-    <p>this is learning git</p>
-<h1>jivanlal</h1>
 </body>
 </html>
